[package]
name = "md_thermostat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Nose-Hoover NVT and Langevin thermostats for MDDEM"
keywords = ["thermostat", "nose-hoover", "langevin", "molecular-dynamics"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
mddem_verlet = { path = "../mddem_verlet", version = "0.1.3" }
