[package]
name = "md_type_rdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-filtered radial distribution function plugin for MDDEM: measure g(r) between specific atom type pairs"
keywords = ["rdf", "molecular-dynamics", "pair-correlation", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
