[package]
name = "md_type_rdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-filtered radial distribution function plugin for MDDEM: measure g(r) between specific atom type pairs"
keywords = ["rdf", "molecular-dynamics", "pair-correlation", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
serde = { version = "1", features = ["derive"] }
