[package]
name = "mddem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Molecular Dynamics / Discrete Element Method simulation framework with plugin architecture"
readme = "../../README.md"
keywords = ["dem", "molecular-dynamics", "simulation", "granular"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["mddem_core/mpi_backend"]

[dependencies]
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.3" }
mddem_app = { path = "../mddem_app", version = "0.1.3" }
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
mddem_verlet = { path = "../mddem_verlet", version = "0.1.3" }
mddem_print = { path = "../mddem_print", version = "0.1.3" }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
dem_bond = { path = "../dem_bond", version = "0.1.3" }
dem_clump = { path = "../dem_clump", version = "0.1.3" }
dem_granular = { path = "../dem_granular", version = "0.1.3" }
dem_wall = { path = "../dem_wall", version = "0.1.3" }
md_lj = { path = "../md_lj", version = "0.1.3" }
md_type_rdf = { path = "../md_type_rdf", version = "0.1.3" }
md_thermostat = { path = "../md_thermostat", version = "0.1.3" }
md_lattice = { path = "../md_lattice", version = "0.1.3" }
md_measure = { path = "../md_measure", version = "0.1.3" }
md_msd = { path = "../md_msd", version = "0.1.3" }
md_bond = { path = "../md_bond", version = "0.1.3" }
md_polymer = { path = "../md_polymer", version = "0.1.3" }
mddem_derive = { path = "../mddem_derive", version = "0.1.3" }
mddem_deform = { path = "../mddem_deform", version = "0.1.3" }
mddem_fixes = { path = "../mddem_fixes", version = "0.1.3" }
dem_thermal = { path = "../dem_thermal", version = "0.1.3" }
dem_measure_plane = { path = "../dem_measure_plane", version = "0.1.3" }
mddem_velocity_distribution = { path = "../mddem_velocity_distribution", version = "0.1.3" }
dem_contact_analysis = { path = "../dem_contact_analysis", version = "0.1.3" }
