[package]
name = "mddem_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "App, SubApp, Plugin, and PluginGroup abstractions for MDDEM simulations"
keywords = ["plugin", "app", "simulation", "ecs"]
categories = ["simulation"]

[dependencies]
mddem_scheduler = { path = "../mddem_scheduler", version = "0.1.3" }
downcast-rs = "1.2.0"
