[package]
name = "mddem_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core simulation infrastructure: TOML config, domain decomposition, MPI communication, atom data structures"
keywords = ["dem", "simulation", "mpi", "domain-decomposition"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["dep:mpi", "dep:libffi-sys"]

[dependencies]
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
sim_app = { path = "../sim_app", version = "0.1.3" }
mddem_derive = { path = "../mddem_derive", version = "0.1.3" }
mpi = { version = "0.8.0", features = ["user-operations", "derive"], optional = true }
libffi-sys = { version = "2.3.0", features = ["system"], optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"
