[package]
name = "mddem_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core simulation infrastructure: TOML config, domain decomposition, MPI communication, atom data structures"
keywords = ["dem", "simulation", "mpi", "domain-decomposition"]
categories = ["simulation", "science"]

[features]
default = ["mpi_backend"]
mpi_backend = ["grass_mpi/mpi_backend"]

[dependencies]
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_mpi = { path = "../../../grass/crates/grass_mpi", default-features = false }
grass_derive = { path = "../../../grass/crates/grass_derive" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.9"
