[package]
name = "mddem_deform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Box deformation fix (erate, vel, final) for MDDEM — triaxial compression, oedometer tests"
keywords = ["deform", "compression", "triaxial", "geomechanics", "dem"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
