[package]
name = "mddem_deform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Box deformation fix (erate, vel, final) for MDDEM — triaxial compression, oedometer tests"
keywords = ["deform", "compression", "triaxial", "geomechanics", "dem"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
grass_scheduler = { git = "https://github.com/SueHeir/grass.git", rev = "ea21ea3629de990a717cc1421747901e5d64a66b" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
