[package]
name = "mddem_fire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FIRE (Fast Inertial Relaxation Engine) energy minimization for MDDEM"
keywords = ["fire", "minimization", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
