[package]
name = "mddem_fixes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atom manipulation fixes (addforce, setforce, freeze, move_linear, viscous, gravity) for MDDEM"
keywords = ["fix", "force", "freeze", "molecular-dynamics", "dem"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
grass_app = { path = "../../../grass/crates/grass_app" }
grass_scheduler = { path = "../../../grass/crates/grass_scheduler" }
mddem_print = { path = "../mddem_print", version = "0.1.3", default-features = false }
dem_atom = { path = "../dem_atom", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
mddem_test_utils = { path = "../mddem_test_utils", version = "0.1.3" }
