[package]
name = "mddem_gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic GPU compute layer for MDDEM (cubecl-backed, runtime f32/f64 selection)"
keywords = ["gpu", "cubecl", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
sim_app = { path = "../sim_app", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }

# cubecl 0.10 prerelease: the 0.3 stable line lacks `cubecl-cpu`, which we need
# so macOS dev (no CUDA) can still validate the f64 path locally on CPU.
# Pinned exact since pre.* APIs can shift between releases.
cubecl = { version = "=0.10.0-pre.3", default-features = false, features = ["std", "wgpu", "cpu"] }

[features]
default = []
cuda = ["cubecl/cuda"]
hip = ["cubecl/hip"]

[dev-dependencies]
