[package]
name = "mddem_neighbor"
version = "0.1.0"
edition = "2021"

[dependencies]
mddem_core = { path = "../mddem_core", default-features = false }
mddem_app = { path = "../mddem_app" }
mddem_scheduler = { path = "../mddem_scheduler" }
nalgebra = "0.33.2"
serde = { version = "1", features = ["derive"] }
