[package]
name = "mddem_print"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Output systems for MDDEM: thermo, VTP visualization, dump files, restart files"
keywords = ["output", "vtk", "dem", "simulation"]
categories = ["simulation", "science"]

[dependencies]
mddem_core = { path = "../mddem_core", version = "0.1.3", default-features = false }
mddem_neighbor = { path = "../mddem_neighbor", version = "0.1.3" }
sim_app = { path = "../sim_app", version = "0.1.3" }
sim_scheduler = { path = "../sim_scheduler", version = "0.1.3" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
